--- a/Electronics2024_Data.ipynb
+++ b/Electronics2024_Data.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "HXERZ7CoHPZc",
-        "outputId": "337863ce-2f4c-4978-892a-bcbd0a699acc"
+        "outputId": "7e069bfb-5796-461c-c6c7-8dde9467c75a"
       },
       "outputs": [
         {
@@ -90,7 +90,7 @@
         "id": "kBOYkUyePT8A",
         "outputId": "2fc71b15-4f1a-4c84-f06c-6cb6de7489e4"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -489,7 +489,7 @@
         "id": "xamYD4i3HUiR",
         "outputId": "81ed76c4-4d20-444a-ac5d-a9488d5a61e7"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -874,7 +874,7 @@
         "id": "fwsMYf9POenl",
         "outputId": "30b5de98-98d9-442a-b85e-a92edb034120"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -907,7 +907,7 @@
         "plt.gca().spines[['top', 'right',]].set_visible(False)"
       ],
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -933,7 +933,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## In 2024, does age have any bearing on how much a customer spends on electronics?"
+        "## Is there a difference on how much a customer spends on electronics with regards to age?"
       ],
       "metadata": {
         "id": "fSW2Fr9HJ9dd"
@@ -967,7 +967,7 @@
         "id": "59AEpxojt69j",
         "outputId": "81c767ce-db09-4a25-863b-9d62d177c470"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1026,7 +1026,7 @@
         "plt.gca().spines[['top', 'right',]].set_visible(False)"
       ],
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1067,8 +1067,7 @@
         "\n",
         "𝐻𝑎:𝜇_1 ≠ 𝜇_2 ( \"Age does have bearing on how much a costumer spends on electronics\" )\n",
         "\n",
-        "(α = 0.05)\n",
-        ""
+        "(α = 0.05)\n"
       ],
       "metadata": {
         "id": "AsjjakSaKU8D"
@@ -1087,7 +1086,7 @@
         "plt.title(\"Boxplot of Discretized Ages of Customers vs. Median Values of Total Prices\")\n",
         "plt.show()\n",
         "\n",
-        "scipy.stats.levene(electronics[electronics['Added Grouped Age'] == '48 through 30yrs']['Total Price'],\n",
+        "scipy.stats.levene(electronics[electronics['Added Grouped Age'] == '18 through 30yrs']['Total Price'],\n",
         "                   electronics[electronics['Added Grouped Age'] == '30 through 50yrs']['Total Price'],\n",
         "                   electronics[electronics['Added Grouped Age'] == '50 and up']['Total Price'],\n",
         "                   center='mean')\n"
@@ -1095,12 +1094,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 557
+          "height": 489
         },
         "id": "8qbt1zjxswAB",
-        "outputId": "a229acac-d73d-4061-ac15-e445f96c7f6b"
+        "outputId": "201b0268-6399-44bb-ecfc-de958d46855a"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1113,30 +1112,26 @@
           "metadata": {}
         },
         {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/numpy/core/fromnumeric.py:3504: RuntimeWarning: Mean of empty slice.\n",
-            "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
-            "/usr/local/lib/python3.10/dist-packages/numpy/core/_methods.py:129: RuntimeWarning: invalid value encountered in scalar divide\n",
-            "  ret = ret.dtype.type(ret / rcount)\n"
-          ]
-        },
-        {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "LeveneResult(statistic=nan, pvalue=nan)"
+              "LeveneResult(statistic=1.4076358936566318, pvalue=0.24474539419588864)"
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 3
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "Equality of Variance\n",
+        "\n",
+        "Hypothesis\n",
+        "\n",
+        "The means are not different\n"
+      ],
       "metadata": {
         "id": "Yw5QtjziATUJ"
       },
